# polypseud-shibbolethsp

./: .cproject  .gitignore  .project  Makefile.am  Portfile.in  acinclude.m4  acx_pthread.m4  bootstrap  config_win32.h  configure.ac  myextension.sln  myextension.spec.in
doc/: CREDITS.txt  Makefile.am  NOTICE.txt  README.txt
src/: .gitignore  Makefile.am  PolyPseudAttributeResolver.cpp  PseudonymDecryptor.cpp  myextension-lite.vcxproj  myextension.cpp  myextension.rc  myextension.vcxproj  polypseud.cpp  resource.h
